--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>My First Heading</h1>
 
         <a href="aPage.html">A page</a>
+        <a href="secondPage.html">Second page</a>
 
         <p>My first paragraph.</p>
 
