cursul 3 - ultimul commit

--- a/aPage.html
+++ b/aPage.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="secondStyles.css">
     </head>
     <body>
-        <div>
+        <div class="carContainer">
             <i class="fa fa-car"></i>
-            <span>some interesting car related text</span>
+            <div>some interesting car related text</div>
         </div>
     </body>
 </html>
