pornim de la zero

--- a/index.html
+++ b/index.html
@@ -2,50 +2,10 @@
 <html>
 
     <head>
-        <title>Exemplu</title>
-        <link rel="stylesheet" href="firstStyles.css">
+        <title>SpaceX Info Site - Home</title>
+        <link rel="stylesheet" href="main.css">
     </head>
 
     <body>
-        <h1>My First Heading</h1>
-
-        <a href="aPage.html">A page</a>
-        <a href="secondPage.html">Second page</a>
-
-        <p>My first paragraph.</p>
-
-        <div>
-            <h3>This is a h3 element</h3>
-        </div>
-
-        <h5>This is a h5</h5>
-
-        <h6>This is a h5</h6>
-
-        <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
-        <br/>
-        <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
-        <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
-
-        <ul>
-            <li>element 1 <b>din lista</b></li>
-            <li>element 2</li>
-            <li>element 3</li>
-        </ul>
-
-        <table>
-            <tr>
-              <th>Company</th>
-              <th>Contact</th>
-              <th>Country</th>
-              <th>Phone</th>
-            </tr>
-            <tr>
-              <td>Alfreds Futterkiste</td>
-              <td>Maria Anders</td>
-              <td>Germany</td>
-              <td>+24</td>
-            </tr>
-          </table>
     </body>
 </html>
