--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <head>
         <title>SpaceX Info Site - Home</title>
         <link rel="stylesheet" href="main.css">
+        <script src="main.js" defer></script>
     </head>
 
     <body>
+      <div id="header">
+        <h1>SpaceX Info Site - Home</h1>
+      </div>
+      <div id="menu">
+        <a>Home</a>
+        <a>Launches</a>
+        <a>Crew</a>
+      </div>
+      <div id="content">
+        <div class="contentTile">a</div>
+        <div class="contentTile">a</div>
+        <div class="contentTile">a</div>
+      </div>
     </body>
 </html>
