--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <head>
         <title>SpaceX Info Site - Home</title>
         <link rel="stylesheet" href="main.css">
-        <script src="main.js" defer></script>
+        <!-- <script src="main.js" defer></script> -->
+        <script src="domElementsPlay.js" defer></script>
     </head>
 
     <body>
@@ -20,6 +21,14 @@
         <div class="contentTile">a</div>
         <div class="contentTile">a</div>
         <div class="contentTile">a</div>
+      </div>
+      <div id="popup">
+        <div class="popupHeader">
+          <span class="headerClose">x</span>
+        </div>
+        <div class="popupContent">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ultrices molestie magna sed varius. Nunc placerat finibus ipsum in lacinia. Sed dapibus, diam at vulputate rhoncus, urna nibh pharetra mi, id bibendum libero tellus eget elit. Fusce elementum orci tortor, id elementum purus vulputate nec. Nunc laoreet pellentesque maximus. Proin neque nisi, convallis quis lorem eget, mattis semper nisl. Sed finibus quis lectus sit amet dictum. Suspendisse viverra, nisl in posuere iaculis, tortor justo suscipit dui, vel pellentesque sapien metus at lectus. Pellentesque nunc odio, porttitor eget eros eget, tincidunt ullamcorper urna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus tempus neque neque, ac ultricies dui commodo in. Praesent quis turpis fermentum augue pulvinar efficitur.
+        </div>
       </div>
     </body>
 </html>
