using 3rd party code and first spacex call

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <head>
         <title>SpaceX Info Site - Home</title>
         <link rel="stylesheet" href="main.css">
-        <!-- <script src="main.js" defer></script> -->
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="crew/init.js" defer></script>
+        <script src="main.js" defer></script>
         <script src="domElementsPlay.js" defer></script>
     </head>
 
@@ -18,9 +20,9 @@
         <a>Crew</a>
       </div>
       <div id="content">
-        <div class="contentTile">a</div>
-        <div class="contentTile">a</div>
-        <div class="contentTile">a</div>
+        <div id="crewTile" class="contentTile">a</div>
+        <div id="capsulesTile" class="contentTile">a</div>
+        <div id="launchesTile" class="contentTile">a</div>
       </div>
       <div id="popup">
         <div class="popupHeader">
