--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>SpaceX Info Site - Home</title>
         <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="crew/crew.css">
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="crew/init.js" defer></script>
         <script src="main.js" defer></script>
@@ -12,7 +13,7 @@
 
     <body>
       <div id="header">
-        <h1>SpaceX Info Site - Home</h1>
+        <h1>SpaceX Info Site - Home &#x1F601;</h1>
       </div>
       <div id="menu">
         <a>Home</a>
@@ -24,12 +25,13 @@
         <div id="capsulesTile" class="contentTile">a</div>
         <div id="launchesTile" class="contentTile">a</div>
       </div>
-      <div id="popup">
+      <div id="crewPopup">
         <div class="popupHeader">
           <span class="headerClose">x</span>
         </div>
         <div class="popupContent">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ultrices molestie magna sed varius. Nunc placerat finibus ipsum in lacinia. Sed dapibus, diam at vulputate rhoncus, urna nibh pharetra mi, id bibendum libero tellus eget elit. Fusce elementum orci tortor, id elementum purus vulputate nec. Nunc laoreet pellentesque maximus. Proin neque nisi, convallis quis lorem eget, mattis semper nisl. Sed finibus quis lectus sit amet dictum. Suspendisse viverra, nisl in posuere iaculis, tortor justo suscipit dui, vel pellentesque sapien metus at lectus. Pellentesque nunc odio, porttitor eget eros eget, tincidunt ullamcorper urna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus tempus neque neque, ac ultricies dui commodo in. Praesent quis turpis fermentum augue pulvinar efficitur.
+          <div id="nasaCol"></div>
+          <div id="spacexCol"></div>
         </div>
       </div>
     </body>
