splitting code in 3 main pages

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <head>
         <title>SpaceX Info Site - Home</title>
         <link rel="stylesheet" href="main.css">
-        <link rel="stylesheet" href="crew/crew.css">
+        <link rel="stylesheet" href="home/home.css">
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-        <script src="crew/init.js" defer></script>
+        <script src="crew/crewInit.js" defer></script>
         <script src="main.js" defer></script>
     </head>
 
@@ -15,23 +15,14 @@
         <h1>SpaceX Info Site - Home &#x1F601;</h1>
       </div>
       <div id="menu">
-        <a>Home</a>
-        <a>Launches</a>
-        <a>Crew</a>
+        <a href="index.html">Home</a>
+        <a href="launches.html">Launches</a>
+        <a href="crew.html">Crew</a>
       </div>
       <div id="content">
         <div id="crewTile" class="contentTile">a</div>
         <div id="capsulesTile" class="contentTile">a</div>
         <div id="launchesTile" class="contentTile">a</div>
-      </div>
-      <div id="crewPopup">
-        <div class="popupHeader">
-          <span class="headerClose">x</span>
-        </div>
-        <div class="popupContent">
-          <div id="nasaCol"></div>
-          <div id="spacexCol"></div>
-        </div>
       </div>
     </body>
 </html>
