--- a/crew.html
+++ b/crew.html
@@ -17,7 +17,7 @@
         <div id="menu">
             <a href="index.html">Home</a>
             <a href="launches.html">Launches</a>
-            <a href="crew.html">Crew</a>
+            <a class="selected" href="crew.html">Crew</a>
         </div>
         <div id="content">
             <div id="crewTile" class="contentTile">a</div>
