--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>SpaceX Info Site - Home &#x1F601;</h1>
       </div>
       <div id="menu">
-        <a href="index.html">Home</a>
+        <a class="selected" href="index.html">Home</a>
         <a href="launches.html">Launches</a>
         <a href="crew.html">Crew</a>
       </div>
