--- a/launches.html
+++ b/launches.html
@@ -14,7 +14,7 @@
         </div>
         <div id="menu">
             <a href="index.html">Home</a>
-            <a href="launches.html">Launches</a>
+            <a class="selected" href="launches.html">Launches</a>
             <a href="crew.html">Crew</a>
         </div>
         <div id="content">
