more work on the tiles layout

--- a/crew.html
+++ b/crew.html
@@ -20,7 +20,9 @@
             <a class="selected" href="crew.html">Crew</a>
         </div>
         <div id="content">
-            <div id="crewTile" class="contentTile">a</div>
+            <div id="crewTile" class="contentTile">
+                <div class="contentTileCore"></div>
+            </div>
         </div>
         <div id="crewPopup">
             <div class="popupHeader">
