--- a/index.html
+++ b/index.html
@@ -20,9 +20,15 @@
         <a href="crew.html">Crew</a>
       </div>
       <div id="content">
-        <div id="crewTile" class="contentTile">a</div>
-        <div id="capsulesTile" class="contentTile">a</div>
-        <div id="launchesTile" class="contentTile">a</div>
+        <div id="crewTile" class="contentTile">
+          <div class="contentTileCore"></div>
+        </div>
+        <div id="capsulesTile" class="contentTile">
+          <div class="contentTileCore"></div>
+        </div>
+        <div id="launchesTile" class="contentTile">
+          <div class="contentTileCore"></div>
+        </div>
       </div>
     </body>
 </html>
