--- a/launches.html
+++ b/launches.html
@@ -18,8 +18,12 @@
             <a href="crew.html">Crew</a>
         </div>
         <div id="content">
-            <div id="crewTile" class="contentTile">a</div>
-            <div id="capsulesTile" class="contentTile">a</div>
+            <div id="crewTile" class="contentTile">
+                <div class="contentTileCore"></div>
+            </div>
+            <div id="capsulesTile" class="contentTile">
+                <div class="contentTileCore"></div>
+            </div>
         </div>
     </body>
 </html>
