moving general popup code to a main location added a teble for the total launches tile

--- a/crew.html
+++ b/crew.html
@@ -24,14 +24,14 @@
                 <div class="contentTileCore"></div>
             </div>
         </div>
-        <div id="crewPopup">
+        <div id="crewPopup" class="popup">
             <div class="popupHeader">
-              <span class="headerClose">x</span>
+                <span class="headerClose">x</span>
             </div>
             <div class="popupContent">
-              <div id="nasaCol"></div>
-              <div id="spacexCol"></div>
+                <div id="nasaCol"></div>
+                <div id="spacexCol"></div>
             </div>
-          </div>
+        </div>
     </body>
 </html>
