--- a/launches.html
+++ b/launches.html
@@ -30,8 +30,35 @@
                     <div class="seconds">Seconds:<span></span></div>
                 </div>
             </div>
-            <div id="capsulesTile" class="contentTile">
-                <div class="contentTileCore"></div>
+            <div id="totalLaunchesTile" class="contentTile">
+                <div class="contentTileCore">
+                    <h4>Total launches:</h4>
+                    <div class="launchesCount">234</div>
+                </div>
+            </div>
+        </div>
+        <div id="nextLaunchPopup" class="popup">
+            <div class="popupHeader">
+                <span class="headerClose">x</span>
+            </div>
+            <div class="popupContent">
+
+
+            </div>
+        </div>
+        <div id="totalLaunchesPopup" class="popup">
+            <div class="popupHeader">
+                <span class="headerClose">x</span>
+            </div>
+            <div class="popupContent">
+                <table>
+                    <tr>
+                        <th>NO.</th>
+                        <th>Name</th>
+                        <th>Date</th>
+                        <th>Ships</th>
+                    </tr>
+                </table>
             </div>
         </div>
     </body>
