--- a/launches.html
+++ b/launches.html
@@ -8,6 +8,9 @@
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
         <script src="main.js" defer></script>
+        <script src="launches/utils.js" defer></script>
+        <script src="launches/nextLaunchTile.js" defer></script>
+        <script src="launches/totalLaunchesTile.js" defer></script>
         <script src="launches/initialize.js" defer></script>
     </head>
 
