fixed icon and long algorithm issues

--- a/launches.html
+++ b/launches.html
@@ -6,7 +6,7 @@
 
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="launches/launches.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
@@ -48,7 +48,7 @@
             <div id="launchesMonthsTile" class="contentTile">
                 <div class="contentTileCore">
                     <h4>Launches months:</h4>
-                    <i class="fa fa-car"></i>
+                    <i class="fas fa-chart-area"></i>
                 </div>
             </div>
         </div>
