implementing a crew gallery + unique crew id exposure

--- a/crew.html
+++ b/crew.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="crew/crew.css">
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-        <script src="crew/crewInit.js" defer></script>
+        <script src="crew/totalCrewTile.js" defer></script>
+        <script src="crew/initialize.js" defer></script>
         <script src="main.js" defer></script>
     </head>
 
@@ -29,8 +30,6 @@
                 <span class="headerClose">x</span>
             </div>
             <div class="popupContent">
-                <div id="nasaCol"></div>
-                <div id="spacexCol"></div>
             </div>
         </div>
     </body>
