--- a/crew.html
+++ b/crew.html
@@ -3,6 +3,8 @@
 
     <head>
         <title>SpaceX Info Site - Crew</title>
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="crew/crew.css">
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -16,9 +18,17 @@
             <h1>SpaceX Info Site - Crew &#x1F601;</h1>
         </div>
         <div id="menu">
-            <a href="index.html">Home</a>
-            <a href="launches.html">Launches</a>
-            <a class="selected" href="crew.html">Crew</a>
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="launches.html">Launches</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="crew.html">Crew</a>
+                </li>
+            </ul>
         </div>
         <div id="content">
             <div id="crewTile" class="contentTile">
