--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
     <head>
         <title>SpaceX Info Site - Home</title>
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="home/home.css">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
@@ -22,9 +24,17 @@
         <h1>SpaceX Info Site - Home &#x1F601;</h1>
       </div>
       <div id="menu">
-        <a class="selected" href="index.html">Home</a>
-        <a href="launches.html">Launches</a>
-        <a href="crew.html">Crew</a>
+        <ul class="nav nav-tabs">
+          <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="launches.html">Launches</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="crew.html">Crew</a>
+          </li>
+      </ul>
       </div>
       <div id="content">
         <div id="homeMap"></div>
