--- a/launches.html
+++ b/launches.html
@@ -4,6 +4,7 @@
     <head>
         <title>SpaceX Info Site - Launches</title>
 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="launches/launches.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -25,9 +26,17 @@
             <h1>SpaceX Info Site - Launches &#x1F601;</h1>
         </div>
         <div id="menu">
-            <a href="index.html">Home</a>
-            <a class="selected" href="launches.html">Launches</a>
-            <a href="crew.html">Crew</a>
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="launches.html">Launches</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="crew.html">Crew</a>
+                </li>
+            </ul>
         </div>
         <div id="content">
             <div id="nextLaunchTile" class="contentTile">
