fixed totalLauches count value

--- a/launches.html
+++ b/launches.html
@@ -51,7 +51,7 @@
             <div id="totalLaunchesTile" class="contentTile">
                 <div class="contentTileCore">
                     <h4>Total launches:</h4>
-                    <div class="launchesCount">234</div>
+                    <div class="launchesCount"></div>
                 </div>
             </div>
             <div id="launchesMonthsTile" class="contentTile">
