--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-        <script src="home/initalize.js" defer></script>
         <script src="main.js" defer></script>
+        <script src="utils.js" defer></script>
+        <script src="home/initalize.js" defer></script>
     </head>
 
     <body>
