--- a/launches.html
+++ b/launches.html
@@ -14,7 +14,7 @@
         <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
 
         <script src="main.js" defer></script>
-        <script src="launches/utils.js" defer></script>
+        <script src="utils.js" defer></script>
         <script src="launches/nextLaunchTile.js" defer></script>
         <script src="launches/totalLaunchesTile.js" defer></script>
         <script src="launches/launchesMonthsTile.js" defer></script>
