splitting the hode tab code for the map

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="main.js" defer></script>
         <script src="utils.js" defer></script>
+        <script src="home/nextLaunchMap.js" defer></script>
         <script src="home/initalize.js" defer></script>
     </head>
 
