added general company info on home and populated the crew tile

--- a/crew.html
+++ b/crew.html
@@ -32,7 +32,10 @@
         </div>
         <div id="content">
             <div id="crewTile" class="contentTile">
-                <div class="contentTileCore"></div>
+                <div class="contentTileCore">
+                    <h4>Total crew:</h4>
+                    <div class="crewCount"></div>
+                </div>
             </div>
         </div>
         <div id="crewPopup" class="popup">
