--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="main.js" defer></script>
         <script src="utils.js" defer></script>
+        <script src="home/companyInfoSection.js" defer></script>
         <script src="home/nextLaunchMap.js" defer></script>
         <script src="home/initalize.js" defer></script>
     </head>
@@ -39,6 +40,34 @@
       </ul>
       </div>
       <div id="content">
+        <div id="companyInfoSection">
+          <h2></h2>
+          <p></p>
+          <h5>General stats:</h5>
+          <table>
+            <tr>
+              <td class="stat-name">founder</td>
+              <td class="stat-founder"></td>
+            </tr>
+            <tr>
+              <td class="stat-name">employees</td>
+              <td class="stat-employees"></td>
+            </tr>
+            <tr>
+              <td class="stat-name">vehicles</td>
+              <td class="stat-vehicles"></td>
+            </tr>
+            <tr>
+              <td class="stat-name">launch sites</td>
+              <td class="stat-launch_sites"></td>
+            </tr>
+            <tr>
+              <td class="stat-name">valuation</td>
+              <td class="stat-valuation"></td>
+            </tr>
+          </table>
+          <h5>Next launch:</h5>
+        </div>
         <div id="homeMap"></div>
       </div>
     </body>
