--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <body>
       <div id="header">
-        <h1>SpaceX Info Site - Home &#x1F601;</h1>
+        <h1>SpaceX Info</h1>
       </div>
       <div id="menu">
         <ul class="nav nav-tabs">
@@ -46,16 +46,8 @@
           <h5>General stats:</h5>
           <table>
             <tr>
-              <td class="stat-name">founder</td>
-              <td class="stat-founder"></td>
-            </tr>
-            <tr>
               <td class="stat-name">employees</td>
               <td class="stat-employees"></td>
-            </tr>
-            <tr>
-              <td class="stat-name">vehicles</td>
-              <td class="stat-vehicles"></td>
             </tr>
             <tr>
               <td class="stat-name">launch sites</td>
