cleaned-up unused popup and fixed tile css

--- a/crew.html
+++ b/crew.html
@@ -30,7 +30,7 @@
             </ul>
         </div>
         <div id="content">
-            <div id="crewTile" class="contentTile">
+            <div id="crewTile" class="contentTile clickableTile">
                 <div class="contentTileCore">
                     <h4>Total crew:</h4>
                     <div class="crewCount"></div>
