--- a/launches.html
+++ b/launches.html
@@ -47,26 +47,17 @@
                     <div class="seconds">Seconds:<span></span></div>
                 </div>
             </div>
-            <div id="totalLaunchesTile" class="contentTile">
+            <div id="totalLaunchesTile" class="contentTile clickableTile">
                 <div class="contentTileCore">
                     <h4>Total launches:</h4>
                     <div class="launchesCount"></div>
                 </div>
             </div>
-            <div id="launchesMonthsTile" class="contentTile">
+            <div id="launchesMonthsTile" class="contentTile clickableTile">
                 <div class="contentTileCore">
                     <h4>Launches months:</h4>
                     <i class="fas fa-chart-area"></i>
                 </div>
-            </div>
-        </div>
-        <div id="nextLaunchPopup" class="popup">
-            <div class="popupHeader">
-                <span class="headerClose">x</span>
-            </div>
-            <div class="popupContent">
-
-
             </div>
         </div>
         <div id="totalLaunchesPopup" class="popup">
