--- a/crew.html
+++ b/crew.html
@@ -7,10 +7,11 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="crew/crew.css">
+        <script src="main.js" defer></script>
+        <script src="utils.js" defer></script>
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="crew/totalCrewTile.js" defer></script>
         <script src="crew/initialize.js" defer></script>
-        <script src="main.js" defer></script>
     </head>
 
     <body>
@@ -37,11 +38,46 @@
                 </div>
             </div>
         </div>
-        <div id="crewPopup" class="popup">
-            <div class="popupHeader">
-                <span class="headerClose">x</span>
+        <div id="crewPopup" class="new-popup">
+            <div class="modal" tabindex="-1">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title">Gallery</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="bootstrapPopupContent galleryPopup">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" disabled>Help</button>
+                    </div>
+                  </div>
+                </div>
             </div>
-            <div class="popupContent">
+        </div>
+        <div id="crewPopupCarousel" class="new-popup">
+            <div class="modal" tabindex="-1">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title">Carousel</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="bootstrapPopupContent carouselPopup">
+                            <button type="button" class="btn btn-light">Prev</button>
+                            <div class="carouselImageContainer">
+                            </div>
+                            <button type="button" class="btn btn-light">Next</button>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-primary carouselBack" data-bs-dismiss="modal">Back to gallery</button>
+                    </div>
+                  </div>
+                </div>
             </div>
         </div>
     </body>
