--- a/crew.html
+++ b/crew.html
@@ -67,10 +67,10 @@
                     </div>
                     <div class="modal-body">
                         <div class="bootstrapPopupContent carouselPopup">
-                            <button type="button" class="btn btn-light">Prev</button>
+                            <button type="button" class="btn btn-light prevButton">Prev</button>
                             <div class="carouselImageContainer">
                             </div>
-                            <button type="button" class="btn btn-light">Next</button>
+                            <button type="button" class="btn btn-light nextButton">Next</button>
                         </div>
                     </div>
                     <div class="modal-footer">
